Achive_2/Program/k8s/deploy-svc-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web
  namespace: ayukarnaukhov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-web
  template:
    metadata:
      labels:
        app: k8s-web
    spec:
      containers:
      - name: k8s-web
        image: uuovv/webserver
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-web
  namespace: ayukarnaukhov
spec:
  selector:
    app: k8s-web
  ports:
  - port: 2000
    targetPort: 2000
