Achive_2/Program/k8s/deploy-svc-ing-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web
  namespace: uuovv
spec:
  replicas: 4
  selector:
    matchLabels:
      app: k8s-web
  template:
    metadata:
      labels:
        app: k8s-web
    spec:
      containers:
      - name: k8s-web
        image: uuovv/webserver
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-web
  namespace: uuovv
spec:
  selector:
    app: k8s-web
  ports:
  - protocol: TCP
    name: http
    port: 2000
    targetPort: 2000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-web
  namespace: uuovv
  labels:
    name: k8s-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #ingressClassName: haproxy
  rules:
  - host: uuovv.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8s-web
            port: 
              number: 2000
